@@ -98,7 +98,7 @@ TODO
     - validateObject() callback for validating JUST the object as a whole; things that can't be done per-property
     - validate() calls all KVC validators AND validateObject
     - pushBindings should call validateObject() once all individual ones are called
-  - No way to create validation errors from save() and have the FW catch them automatically
+  - DONE No way to create validation errors from save() and have the FW catch them automatically (done via WFErrorsException)
     - Maybe this isn't a problem? Pages should try/catch around things that can throw and wrap errors into a WFError... 
       OR should we do this try/catch and WFError wrapping automatically, and just let the action method OVERRIDE that if it is desirable to NOT catch that error?
       OR maybe we could throw a special type of exception from the action method that WON'T be caught by the FW if we want the exception to escalate...
