@@ -47,23 +47,106 @@ class WFError extends WFObject
     
 }
 
-// @todo eventually refactor internal WFErrorsException usage into this class... then we can wrap helpers around it.
-// class WFErrorArray extends WFObject
-// {
-//     /**
-//      * @var array An array of WFError objects, keyed by "property" of error.
-//      *            - Integer keys indicate errors that are not mapped to specific properties or are errors due to interdependent keys.
-//      *            - Non-integer keys indicate the "property" that the error was generated by.
-//      */
-//     protected $errors;
-// 
-//     public function __construct($errors = array())
-//     {
-//         parent::__construct();
-//         if (!is_array($errors)) throw new WFException("WFErrorArray must be initialized with an array");
-//         $this->errors = $errors;
-//     }
-// }
+/**
+ * WFErrorArray class can be used in lieu of array() for passing into KVC functions as the $errors parameter.
+ *
+ * WFErrorArray knows how to handle the multi-level error structure used by {@link WFKeyValueCoding::validateObject()}.
+ *
+ * Using WFErrorArray instead of a standard error will allow you to use the $errors array as an object and interrogate it
+ * for things like particular error codes, all errors for a certain property, etc.
+ */
+class WFErrorArray extends WFArray
+{
+    public function __construct($array = array(), $flags = 0, $iterator_class = "ArrayIterator")
+    {
+        parent::__construct($array, $flags, $iterator_class);
+    }
+
+    public function hasErrorWithCode($code)
+    {
+        foreach ($this->allErrors() as $e)
+        {
+            if ($e->errorCode() == $code) return true;
+        }
+        return false;
+    }
+
+    public function allErrors()
+    {
+        $flattenedErrors = array();
+        foreach ($this as $k => $v) {
+            if (gettype($k) == 'integer')
+            {
+                $flattenedErrors[] = $v;
+            }
+            else
+            {
+                $flattenedErrors = array_merge($flattenedErrors, $v);
+            }
+        }
+        return $flattenedErrors;
+    }
+
+    /**
+     * Get the errors that are not mapped to specific properties.
+     *
+     * @return array An array of WFError objects.
+     */
+    public function generalErrors()
+    {
+        $general = array();
+        foreach ($this as $k => $v) {
+            if (gettype($k) == 'integer')
+            {
+                $general[] = $v;
+            }
+        }
+        return $general;
+    }
+
+    /**
+     * Get all errors for the given key.
+     *
+     * @return array An array of all WFError objects.
+     */
+    public function errorsForKey($key)
+    {
+        if (isset($this[$key]))
+        {
+            return $this[$key];
+        }
+        return array();
+    }
+
+    /**
+     * Get all error codes for the given key.
+     *
+     * @return array An array all codes for the WFError objects for the given key.
+     */
+    public function errorCodesForKey($key)
+    {
+        $codes = array();
+        foreach ($this->errorsForKey($key) as $e) {
+            $codes[] = $e->errorCode();
+        }
+        return $codes;
+    }
+
+    public function __toString()
+    {
+        $str = "";
+        foreach ($this->generalErrors() as $e) {
+            $str .= $e->errorCode() . ' - ' . $e->errorMessage() . "\n";
+        }
+        foreach ($this as $k => $v) {
+            if (gettype($k) == 'integer') continue;
+            $str .= "Errors for key: {$k}\n";
+            $keyErrs = new WFErrorArray($v);
+            $str .= $keyErrs;
+        }
+        return $str;
+    }
+}
 
 /**
  * A special WFException subclass meant for carrying multiple WFError objects.
@@ -71,6 +154,7 @@ class WFError extends WFObject
  * WFPage automatically catches WFErrorsException's thrown from action methods and displays the errors.
  *
  * WFErrorsException knows how to handle the multi-level error structure used by {@link WFKeyValueCoding::validateObject()}.
+ * @see WFErrorArray
  */
 class WFErrorsException extends WFException
 {
@@ -81,9 +165,13 @@ class WFErrorsException extends WFException
         if (!is_array($errors)) throw( new WFException("WFErrorsException requires an array of WFError objects.") );
         if (count($errors) === 0) throw( new WFException("WFErrorsException must contain errors!") );
 
+        if (!($errors instanceof WFErrorArray))
+        {
+            $errors = new WFErrorArray($errors);
+        }
         $this->errors = $errors;
 
-        $message = join(',', WFArray::arrayWithArray($this->allErrors())->valueForKeyPath('errorMessage'));
+        $message = join(',', $this->errors->valueForKeyPath('allErrors.errorMessage'));
         parent::__construct($message);
     }
 
@@ -101,61 +189,44 @@ class WFErrorsException extends WFException
      * Get the errors that are not mapped to specific properties.
      *
      * @return array An array of WFError objects.
+     * @deprecated Use WFErrorsException->errors()->generalErrors()
      */
     public function generalErrors()
     {
-        $general = array();
-        foreach ($this->errors as $k => $v) {
-            if (gettype($k) == 'integer')
-            {
-                $general[] = $v;
-            }
-        }
-        return $general;
+        return $this->errors->generalErrors();
     }
 
     /**
      * Get all errors in the current exception.
      *
      * @return array An array of all WFError objects.
+     * @deprecated Use WFErrorsException->errors()->allErrors()
      */
     public function allErrors()
     {
-        $flattenedErrors = array();
-        foreach ($this->errors as $k => $v) {
-            if (gettype($k) == 'integer')
-            {
-                $flattenedErrors[] = $v;
-            }
-            else
-            {
-                $flattenedErrors = array_merge($flattenedErrors, $v);
-            }
-        }
-        return $flattenedErrors;
+        return $this->errors->allErrors();
     }
 
     /**
      * Get all errors for the given key.
      *
      * @return array An array of all WFError objects.
+     * @deprecated Use WFErrorsException->errors()->errorsForKey($key)
      */
     public function errorsForKey($key)
     {
-        if (isset($this->errors[$key]))
-        {
-            return $this->errors[$key];
-        }
-        return array();
+        return $this->errors->errorsForKey($key);
     }
 
+    /**
+     * Get all error codes for the given key.
+     *
+     * @return array An array all codes for the WFError objects for the given key.
+     * @deprecated Use WFErrorsException->errors()->errorCodesForKey($key)
+     */
     public function errorCodesForKey($key)
     {
-        $codes = array();
-        foreach ($this->errorsForKey($key) as $e) {
-            $codes[] = $e->errorCode();
-        }
-        return $codes;
+        return $this->errors->errorCodesForKey($key);
     }
 
     /**
@@ -177,5 +248,10 @@ class WFErrorsException extends WFException
          {
              unset($this->errors[$key]);
          }
+    }
+
+    public function __toString()
+    {
+        return "WFErrorsException with errors: " . $this->errors;
     }
 }
