@@ -1,16 +1,7 @@
 <?php
 
-/*
- * @package test
- */
- 
-
+require_once(getenv('PHOCOA_PROJECT_CONF'));
 error_reporting(E_ALL);
-require_once('/Users/alanpinstein/dev/sandbox/showcaseng/showcaseng/conf/webapp.conf');
-require_once "framework/WFWebApplication.php";
-require_once "framework/util/PHPArrayDumper.php";
-
-require_once "PHPUnit/Framework/TestCase.php";
 
 class WFErrorsExceptionTest extends PHPUnit_Framework_TestCase
 {
