@@ -9,6 +9,10 @@ Legend:
 Version 0.2.7 - ??
 - [new] Add loading indicator to WFYAHOO_widget_TreeViewNode
 - [new] Add "no matches" indicator to WFYAHOO_widget_TreeViewNode + WFSearchField
+- [new] Refactor WFErrorsException to simply wrap new class WFErrorArray which is an optional drop-in replacement for the $errors param in validateXXX() calls.
+        WFErrorArray is a perfect wrapper for the errors returned by the validation engine, whether via validate<Key> or validateObject.
+        WFErrorArray makes it very easy to test for certain error codes and/or enumerate all errors in the error list generated by Key-Value Validation.
+- [new] Refactor WFArray, now with more KVC goodness!
 
 Version 0.2.6 - 7/7/2009
 - [new] Add YUILoader support for "combine" and "comboBase".
